--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,4 +1,8 @@
+<% include partials/header %>
+
 <h1>Landing page goes here</h1>
 <p>Welcome to KelpCamp!</p>
 
 <a href="/campgrounds">View campgrounds page</a>
+
+<% include partials/footer %>
