--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,8 +1,10 @@
 <% include partials/header %>
 
-<h1>Landing page goes here</h1>
+<% include partials/navbar %>
+<main class="container text-center p-3">
+<h1 >Landing page goes here</h1>
 <p>Welcome to KelpCamp!</p>
 
-<a href="/campgrounds">View campgrounds page</a>
-
+<a href="/campgrounds" class="btn btn-primary btn-md">View campgrounds page</a>
+</main>
 <% include partials/footer %>
