--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,12 +1,24 @@
 <% include partials/header %>
-<a href="/campgrounds">Go back</a>
 
-<h1>Add a new campground</h1>
+<% include partials/navbar %>
+<a href="/campgrounds" class="btn btn-secondary btn-sm m-3">Go back</a>
+<main class="container col-10 col-md-7 col-lg-5 p-3">
+    <h1 class="text-center pb-4">Add a new campground</h1>
 
-<form action="/campgrounds" method="POST">
-    <input type="text" aria-placeholder="name" name="name">
-    <input type="text" aria-placeholder="image" name="image">
-    <button>Submit</button>
-</form>
+    <form action="/campgrounds" method="POST">
+        <section class="form-group">
+            <label for="name">Name:</label>
+            <input type="text" aria-placeholder="name" placeholder="enter name" name="name" class="form-control">
+        </section>
+
+        <section class="form-group">
+            <label for="name">Image Url:</label>
+            <input type="text" aria-placeholder="image" placeholder="enter image url" name="image" class="form-control">
+        </section>
+        <section class="d-flex flex-column">
+            <button class="btn btn-primary">Submit</button>
+        </section>
+    </form>
+</main>
 
 <% include partials/footer %>
