added description input to new campground form

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
     </header>
     <section class="row">
             <% campgrounds.map(campground => { %>
-                <section class="col-md-6 col-lg-4 mt-3">
+                <section class="col-sm-6 col-lg-4">
                     <section class="card p-1 text-center">
                         <img src="<%= campground.image %>" alt="Campground Image" class="card-img-top img-fluid">
                         <section class="card-body">
