--- a/views/show.ejs
+++ b/views/show.ejs
@@ -2,7 +2,7 @@
 
 <% include partials/navbar %>
 
-<main class="container text-center">
+<main class="container text-center p-3">
 
     <h1><%= campground.name %></h1>
 
