--- a/views/new.ejs
+++ b/views/new.ejs
@@ -8,13 +8,19 @@
     <form action="/campgrounds" method="POST">
         <section class="form-group">
             <label for="name">Name:</label>
-            <input type="text" aria-placeholder="name" placeholder="enter name" name="name" class="form-control">
+            <input id="name" type="text" aria-placeholder="enter name" placeholder="enter name" name="name" class="form-control">
         </section>
 
         <section class="form-group">
-            <label for="name">Image Url:</label>
-            <input type="text" aria-placeholder="image" placeholder="enter image url" name="image" class="form-control">
+            <label for="image">Image Url:</label>
+            <input id="image" type="text" aria-placeholder="enter image url " placeholder="enter image url" name="image" class="form-control">
         </section>
+
+        <section class="form-group">
+            <label for="description">Description:</label>
+            <input id="description" type="text" aria-placeholder="enter a description" placeholder="enter a description" name="description" class="form-control">
+        </section>
+        
         <section class="d-flex flex-column">
             <button class="btn btn-primary">Submit</button>
         </section>
