--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,6 +1,6 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
-<% include partials/navbar %>
+<% include ../partials/navbar %>
 
 <main class="container p-3">
     <header class="jumbotron">
@@ -14,7 +14,7 @@
     </header>
     <section class="row">
             <% campgrounds.map(campground => { %>
-                <section class="col-sm-6 col-lg-4">
+                <section class="col-sm-6 col-lg-4 pb-4">
                     <section class="card p-1 text-center">
                         <img src="<%= campground.image %>" alt="Campground Image" class="card-img-top img-fluid">
                         <section class="card-body">
@@ -27,4 +27,4 @@
     </section>
 </main>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
