--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,6 +1,6 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
-<% include partials/navbar %>
+<% include ../partials/navbar %>
 <a href="/campgrounds" class="btn btn-secondary btn-sm m-3">Go back</a>
 <main class="container col-10 col-md-7 col-lg-5 p-3">
     <h1 class="text-center pb-4">Add a new campground</h1>
@@ -27,4 +27,4 @@
     </form>
 </main>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
