--- a/assets/css/application.scss
+++ b/assets/css/application.scss
@@ -4,6 +4,12 @@ nav {
     }
 }
 
-.form-control-sm {
-    width: 300px;
+#show-page {
+    li#comments {
+        background-color:rgb(247, 247, 249);
+    }
+}
+
+#new-comment-form {
+        background-color: rgb(247, 247, 249);
 }
