--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -42,17 +42,11 @@
         </section>
         <input id="text" type="text" aria-placeholder="Enter text" placeholder="Enter text" name="comment[text]" class="form-control">
     </div>
-    <div class="form-group">
-        <section class="text-left">
-            <label for="author">Author:</label>
-        </section>
-        <input id="author" type="text" aria-placeholder="Enter name" placeholder="Enter name" name="comment[author]" class="form-control">
-    </div>
     <section class="d-flex justify-content-end">
         <button class="btn btn-primary">Post</button>
     </section>
     </form>
- 
+
     <section class="dropdown-divider"></section>
 
     <!-- comments -->
@@ -60,7 +54,7 @@
     <ul class="list-group">
     <% campground.comments.map(comment => { %>
         <li id="comments"class="list-group-item">
-            <p class="text-left col-8"><strong><%= comment.author %> said:</strong></p>
+            <p class="text-left col-8"><strong><%= comment.author.username %> said:</strong></p>
             <section class="d-flex justify-content-between">
                 <p class="text-left col-8"><%= comment.text %></p>
                 <p class="col-4"><em>Posted 10 days ago</em></p>
