--- a/assets/css/application.scss
+++ b/assets/css/application.scss
@@ -13,3 +13,13 @@ nav {
 #new-comment-form {
         background-color: rgb(247, 247, 249);
 }
+
+#edit-comment-form {
+    box-shadow: 1px 1px 17px 1px rgba(0,0,0,0.75);
+}
+
+#user-question {
+    // box-shadow: 1px 1px 17px 1px rgba(0,0,0,0.75);
+    // box-shadow: 6px 6px 5px -4px rgba(52,58,64,1);
+    box-shadow: 6px 6px 5px -8px rgba(52,58,64,1);
+}
