--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -68,12 +68,14 @@
                 <p class="text-left col-8"><%= comment.text %></p>
                 <p class="col-4"><em>Posted 10 days ago</em></p>
             </section>
+        <% if(currentUser && comment.author.id.equals(currentUser._id)) { %>
             <section class="d-flex">
                 <a href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit" class="btn btn-warning btn-sm text-mute mr-1">Edit comment</a>
                 <form action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
                     <button class="btn btn-sm btn-danger">Delete</button>
                 </form>
             </section>
+        <% } %>
     <% }) %>
     </ul>
 
