added middleware/index.js file and moved functions to that file and included those functions back in the routes

--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -52,7 +52,7 @@
         <input id="text" type="text" aria-placeholder="Enter text" placeholder="Enter text" name="comment[text]" class="form-control" value="<%= comment.text %>">
     </div>
     <section class="d-flex justify-content-end">
-        <button class="btn btn-primary">Post</button>
+        <button class="btn btn-primary">Update</button>
     </section>
     </form>
 
