--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,4 +12,32 @@
     <title>KelpCamp</title>
 </head> 
     <body>
-    
+        <% include ./navbar %>
+
+        <section class="container mt-2">
+           <% if(error && error.length > 0) { %>
+            <section class="alert alert-danger" role="alert">
+               <%- error %>
+               <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">
+                        <small>
+                            <span class="fas fa-times text-danger"></span>
+                        </small>
+                    </span>
+                </button>
+            </section>
+           <% } else if(success && success.length > 0) { %>
+            <section class="alert alert-success" role="alert">
+                <%- success %>
+                <!-- close button -->
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">
+                        <small>
+                            <span class="fas fa-times text-success"></span>
+                        </small>
+                    </span>
+                </button>
+                <!-- close button -->
+            </section>
+            <% } %>
+        </section>
