Added more flash message to routes

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,7 +1,8 @@
 <% include ../partials/header %>
 
-<a href="/" class="btn btn-secondary btn-sm m-3">Return Home</a>
 <main class="container col-10 col-md-7 col-lg-5 p-3">
+
+    <section id="edit-campground" class="p-5">
     <h1 class="text-center pb-4">Edit - <%= campground.name %></h1>
 
     <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
@@ -21,9 +22,12 @@
         </section>
         
         <section class="d-flex flex-column">
-            <button class="btn btn-success">Update</button>
+            <button class="btn btn-success mb-1">Update</button>
+            <a href="/campgrounds/<%= campground._id %>" class="btn btn-warning">Cancel</a>
         </section>
     </form>
+    </section>
+
 </main>
 
 <% include ../partials/footer %>
