--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -15,8 +15,8 @@ nav .navbar-toggler {
           box-shadow: 0px 1px 11px -3px #e7a61a;
 }
 
-#user-question {
-  -webkit-box-shadow: 6px 6px 5px -8px #343a40;
-          box-shadow: 6px 6px 5px -8px #343a40;
+#edit-campground {
+  -webkit-box-shadow: 0px 1px 11px -3px #e7a61a;
+          box-shadow: 0px 1px 11px -3px #e7a61a;
 }
 /*# sourceMappingURL=application.css.map */
