--- a/assets/css/application.scss
+++ b/assets/css/application.scss
@@ -18,8 +18,6 @@ nav {
     box-shadow: 0px 1px 11px -3px rgba(231,166,26,1);
 }
 
-#user-question {
-    // box-shadow: 1px 1px 17px 1px rgba(0,0,0,0.75);
-    // box-shadow: 6px 6px 5px -4px rgba(52,58,64,1);
-    box-shadow: 6px 6px 5px -8px rgba(52,58,64,1);
+#edit-campground {
+    box-shadow: 0px 1px 11px -3px rgba(231,166,26,1);
 }
