Refactored the landing page - added image slideshow landing page, created auth folder in views folder and added register.ejs and login.ejs to it, changed render routes inside auth routes to reflect those moves

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 <main class="container col-10 col-md-7 col-lg-5 p-3">
     <h1 class="text-center pb-4">Login</h1>
@@ -20,4 +20,4 @@
     </form>
 </main>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
