--- a/views/campgrounds/delete.ejs
+++ b/views/campgrounds/delete.ejs
@@ -1,15 +1,16 @@
 <% include ../partials/header %>
 
 <main id="show-page" class="container text-center p-3">
-                                    <!-- user question after hitting delete -->
-                                    <section id="user-question" class="alert alert-warning mt-3 d-flex align-items-center">Are you sure you want to delete this campground post?
-                                            <span class="d-flex ml-2">
-                                            <form class="mr-1" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-                                                <button class="btn btn-danger">Yes, Delete</button>
-                                            </form>
-                                            <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>">Cancel</a>
-                                        </span>
-                                        </section>
+    <!-- user question after hitting delete -->
+    <section id="user-question" class="alert alert-warning mt-3 d-flex align-items-center">Are you sure you want to delete this campground post?
+            <span class="d-flex ml-2">
+            <form class="mr-1" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+                <button class="btn btn-danger">Yes, Delete</button>
+            </form>
+            <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>">Cancel</a>
+            <small class="align-self-end ml-1 text-secondart">*Deletion is final.</small>
+            </span>
+        </section>
     <section class="row">
         <!-- sidebar -->
         <section class="col-lg-3">
@@ -33,7 +34,7 @@
                     <!-- campground info -->
                 <section class="d-flex justify-content-between">
                     <h4 class="card-title"><a href=""><%= campground.name %></a></h4>
-                    <h4>$9.00/night</h4>
+                    <h4>$<%= campground.price %>/night</h4>
                 </section>
                     <p class="card-text"><%= campground.description %></p>
                     <p>
@@ -67,17 +68,24 @@
     <!-- comments -->
     <h5>Comments</h5>
     <ul class="list-group">
-    <% campground.comments.map(comment => { %>
-        <li id="comments"class="list-group-item">
-            <p class="text-left col-8"><strong><%= comment.author.username %> said:</strong></p>
-            <section class="d-flex justify-content-between">
-                <p class="text-left col-8"><%= comment.text %></p>
-                <p class="col-4"><em>Posted 10 days ago</em></p>
-            </section>
-            <section class="text-left"><a href="/campgrounds/<%= campground._id %>/edit" class="btn btn-warning btn-sm text-mute">Edit comment</a></section>
-        </li>
-    <% }) %>
-    </ul>
+        <% campground.comments.map(comment => { %>
+            <li id="comments"class="list-group-item">
+                <p class="text-left col-8"><strong><%= comment.author.username %> said:</strong></p>
+                <section class="d-flex justify-content-between">
+                    <p class="text-left col-8"><%= comment.text %></p>
+                    <p class="col-4"><em>Posted 10 days ago</em></p>
+                </section>
+            <% if(currentUser && comment.author.id.equals(currentUser._id)) { %>
+                <section class="d-flex">
+                    <a href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit" class="btn btn-warning btn-sm text-mute mr-1">Edit comment</a>
+                    <form action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
+                        <button class="btn btn-sm btn-danger">Delete</button>
+                    </form>
+                    <small class="align-self-end ml-1 text-secondary">*Deletion is final.</small>
+                </section>
+            <% } %>
+        <% }) %>
+        </ul>
 
     </section>
 
