--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -20,6 +20,11 @@
             <label for="description">Description:</label>
             <input id="description" type="text" aria-placeholder="enter a description" placeholder="enter a description" name="campground[description]" value="<%= campground.description %>"  class="form-control">
         </section>
+
+        <section class="form-group">
+            <label for="price">Price:</label>
+            <input id="price" type="number" aria-placeholder="Enter a price" placeholder="Enter a price" name="price" min="0.00" step="0.01" value="<%= campground.price %>" class="form-control">
+        </section>
         
         <section class="d-flex flex-column">
             <button class="btn btn-success mb-1">Update</button>
