--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,25 +1,29 @@
 <% include ../partials/header %>
 
-<a href="/" class="btn btn-secondary btn-sm m-3">Return Home</a>
 <main class="container col-10 col-md-7 col-lg-5 p-3">
     <h1 class="text-center pb-4">Add a new campground</h1>
 
     <form action="/campgrounds" method="POST">
         <section class="form-group">
             <label for="name">Name:</label>
-            <input id="name" type="text" aria-placeholder="enter name" placeholder="enter name" name="name" class="form-control">
+            <input id="name" type="text" aria-placeholder="Enter name" placeholder="Enter name" name="name" class="form-control">
         </section>
 
         <section class="form-group">
             <label for="image">Image Url:</label>
-            <input id="image" type="text" aria-placeholder="enter image url " placeholder="enter image url" name="image" class="form-control">
+            <input id="image" type="text" aria-placeholder="Enter image url " placeholder="Enter image url" name="image" class="form-control">
         </section>
 
         <section class="form-group">
             <label for="description">Description:</label>
-            <input id="description" type="text" aria-placeholder="enter a description" placeholder="enter a description" name="description" class="form-control">
+            <input id="description" type="text" aria-placeholder="Enter a description" placeholder="Enter a description" name="description" class="form-control">
         </section>
         
+        <section class="form-group">
+            <label for="price">Price:</label>
+            <input id="price" type="number" aria-placeholder="Enter a price" placeholder="Enter a price" name="price" min="0.01" step="0.01" class="form-control">
+        </section>
+
         <section class="d-flex flex-column">
             <button class="btn btn-primary">Submit</button>
         </section>
