added isAdmin to user model, updated functions and views to allow admin to have access to editing and deleting anything

--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -13,6 +13,11 @@
             <label for="password">Password:</label>
             <input id="password" type="password" aria-placeholder="Enter a password" placeholder="Enter a password" name="password" class="form-control">
         </section>
+
+        <section class="form-group">
+            <label for="admin">Admin:</label>
+            <input id="admin" type="password" aria-placeholder="Enter admin code" placeholder="Enter admin code" name="adminCode" class="form-control">
+        </section>
         
         <section class="d-flex flex-column">
             <button class="btn btn-success">Submit</button>
