added a profile page, added avatar to User model, added fuzzy search

--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -19,4 +19,12 @@ nav .navbar-toggler {
   -webkit-box-shadow: 0px 1px 11px -3px #e7a61a;
           box-shadow: 0px 1px 11px -3px #e7a61a;
 }
+
+#admin-user-text {
+  color: #4B0082;
+}
+
+#profile-page-title {
+  background-color: #ADD8E6;
+}
 /*# sourceMappingURL=application.css.map */
