--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -10,6 +10,11 @@
         </section>
 
         <section class="form-group">
+            <label for="avatar">Profile Image:</label>
+            <input id="avatar" type="text" aria-placeholder="Enter an image url" placeholder="Enter an image url" name="avatar" class="form-control">
+        </section>
+
+        <section class="form-group">
             <label for="password">Password:</label>
             <input id="password" type="password" aria-placeholder="Enter a password" placeholder="Enter a password" name="password" class="form-control">
         </section>
