--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -27,7 +27,7 @@
                 </section>
                     <p class="card-text"><%= campground.description %></p>
                     <p>
-                        <em class="small">Submitted by <%= campground.author.username %>,  <%= moment(campground.createdAt).fromNow() %></em>
+                        <em class="small">Submitted by <a href="/users/<%= campground.author.id %>"><%= campground.author.username %></a>,  <%= moment(campground.createdAt).fromNow() %></em>
                     </p>
                   <% if(currentUser && campground.author.id.equals(currentUser._id) || currentUser && currentUser.isAdmin) { %>
                     <section class="d-flex">
