--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -9,6 +9,11 @@
             <p id="admin-user-text">*Admin User</p>
         <% } %>
         <img src="<%= user.avatar %>" class="img-fluid rounded" alt="Profile image">
+        <% if(currentUser && user._id.equals(currentUser._id)) { %>
+        <p>
+            <a href="/users/<%= user._id %>/edit" class="btn btn-sm btn-warning mt-1">Edit Avatar</a>
+        </p>
+        <% } %>
     </section>
     <section class="col-md-9 pt-3 pt-md-0 mt-lg-">
         <h3 class="text-center">Campgrounds</h3>
