--- a/assets/css/landing.scss
+++ b/assets/css/landing.scss
@@ -37,22 +37,23 @@ body {
         animation: imageAnimation 50s linear infinite; 
       }
       li:nth-child(1) { 
-        background-image: url(http://i.imgur.com/K3mPv14.jpg) 
+        background-image: url(https://images.unsplash.com/photo-1533597818151-d1071f26fe32?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60);
       }
       li:nth-child(2) { 
-        background-image: url(http://i.imgur.com/SBEmFpv.jpg);
+        background-image: url(https://images.unsplash.com/photo-1510002507184-45227b3a3524?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60);
         animation-delay: 10s; 
       }
       li:nth-child(3) { 
-        background-image: url(http://i.imgur.com/emvhOnb.jpg);
+        background-image: url(https://images.unsplash.com/photo-1455763916899-e8b50eca9967?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60);
         animation-delay: 20s; 
       }
       li:nth-child(4) { 
-        background-image: url(http://i.imgur.com/2LSMCmJ.jpg);
+        background-image: url(https://images.unsplash.com/photo-1504851149312-7a075b496cc7?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60);
+        background-position: bottom;
         animation-delay: 30s; 
       }
       li:nth-child(5) { 
-        background-image: url(http://i.imgur.com/TVGe0Ef.jpg);
+        background-image: url(https://images.unsplash.com/photo-1440262206549-8fe2c3b8bf8f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60);
         animation-delay: 40s; 
       }
 }
